[gd_scene load_steps=8 format=3 uid="uid://denuoh6sdtgop"]

[ext_resource type="Texture2D" uid="uid://xludn5yth3fq" path="res://Side Characters/Sprites/thumbnail_Final knight-6.png.png" id="1_efrb7"]
[ext_resource type="Script" path="res://Enemies/Penemies/penemy_knight_4.gd" id="1_gf0of"]
[ext_resource type="Texture2D" uid="uid://dte30ynxg823y" path="res://Side Characters/Sprites/thumbnail_Final knight-6.png-2.png.png" id="2_3iv51"]
[ext_resource type="Texture2D" uid="uid://cqoep2qp4p7nr" path="res://Side Characters/Sprites/thumbnail_Final knight-6.png-2.png (1).png" id="3_1h6k0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ga7cc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_efrb7")
}],
"loop": true,
"name": &"alive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3iv51")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1h6k0")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sev6g"]
radius = 35.0
height = 78.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4avht"]
radius = 20.0
height = 56.0

[node name="Penemy_Knight4" type="CharacterBody2D"]
script = ExtResource("1_gf0of")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.294, 0.294)
sprite_frames = SubResource("SpriteFrames_ga7cc")
animation = &"alive"

[node name="HitboxKnight4" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxKnight4"]
position = Vector2(-2, -1)
shape = SubResource("CapsuleShape2D_sev6g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4avht")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="killed4" from="." to="." method="_on_killed_4"]
[connection signal="body_entered" from="HitboxKnight4" to="." method="_on_hitbox_knight_4_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
